# lincheck_cpp

./: .gitignore  CMakeLists.txt  LICENSE_POLICY.md  OPACITY_PLAN.md  PORTING_LINCHECK_TO_CPP.md  README.md  README_ARCHIVE.md  USING_CPP_LINCHECK.md
.github/workflows/: ci.yml
examples/: multiverse_bank_example.cpp  multiverse_tiny_set_example.cpp
include/lincheck/: lincheck.hpp  multiverse_hooks.hpp
include/lincheck/wrappers/: barrier.hpp
tests/: lincheck_mvp_tests.cpp  modular_header_smoke.cpp  multiverse_smoke_tests.cpp
tests/cmake/: source_rewrite_compile_smoke.cmake
tests/fixtures/: clang_source_audit_clean.cpp  source_audit_bad.cpp  source_audit_suppressed.cpp  source_rewrite_compile_input.cpp
tools/: check_multiverse_mode2_algorithm_fix.sh  check_multiverse_patch.sh  lincheck_clang_source_audit.cpp  lincheck_source_audit.cpp  lincheck_source_rewrite.cpp
